# stm32_i2s

./: .gitignore  CHANGELOG.md  Cargo.toml  Embed.toml  README.md  build.rs  memory.x  rework-branch.md
examples/: master_transmit_d16f16.rs  master_transmit_d16f32.rs  master_transmit_d24f32.rs  master_transmit_d32f32.rs  master_transmit_with_master_clock.rs
src/: config.rs  driver.rs  ehal.rs  format.rs  lib.rs  marker.rs  transfer.rs
src/format/: data24frame32.rs
src/pac/: mod.rs  spi1.rs
src/pac/spi1/: cr1.rs  cr2.rs  crcpr.rs  dr.rs  i2scfgr.rs  i2spr.rs  rxcrcr.rs  sr.rs  txcrcr.rs
src/v12x/: format.rs  mod.rs
src/v12x/format/: data24frame32.rs
src/v12x/pac/: mod.rs  spi1.rs
src/v12x/pac/spi1/: cr1.rs  cr2.rs  crcpr.rs  dr.rs  i2scfgr.rs  i2spr.rs  rxcrcr.rs  sr.rs  txcrcr.rs
