[package]
name = "stm32_i2s_v12x"
version = "0.3.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>", "Amaury Abrial aka Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"
description = "Driver for I2S communication (using SPI peripherals) for some STM32 microcontrollers"
license = "0BSD"
repository = "https://github.com/samcrow/stm32_i2s"
keywords = ["i2s", "audio", "embedded"]
categories = ["embedded", "hardware-support", "multimedia::audio", "no-std"]

[dependencies]
vcell = "0.1.3"
nb = "1.0.0"
